--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -152,5 +152,5 @@ url = {http://www.revistacubanadefisica.org/index.php/rcf/article/view/2021v38p0
   pages={ACL--26},
   year={2002},
   publisher={Wiley Online Library},
-  doi={https://doi.org/10.1029/2001JD000776}
+  doi={10.1029/2001JD000776}
 }
